# scatterbox

./: .gitignore  PHASE0_PROMPT.md  PLAN.md  README.md  TASKS.md  pyproject.toml
cli/scatterbox_cli/: __init__.py  main.py
core/scatterbox/: __init__.py  ec.py  errors.py  keys.py  oauth.py  onboarding.py  pipeline.py  placement.py  portability.py  register.py  scrubber.py  vault.py
core/scatterbox/providers/: __init__.py  _http.py  _megacrypto.py  _s3.py  _template.py  base.py  chaos.py  dropbox.py  gdrive.py  koofr.py  localfs.py  mega.py  onedrive.py  oracle.py  pcloud.py  r2.py  tigris.py  vercel_blob.py
daemon/: README.md
daemon/scatterbox_daemon/: __init__.py  app.py  state.py  worker.py
docs/: FEATURES.md
tests/: conftest.py  test_chaos_gate.py  test_chaos_provider.py  test_cli.py  test_cold_recovery.py  test_corruption.py  test_daemon.py  test_dropbox.py  test_ec.py  test_edge_cases.py  test_gdrive.py  test_koofr.py  test_listing_and_move.py  test_mega.py  test_oauth.py  test_onedrive.py  test_oracle.py  test_pcloud.py  test_placement.py  test_policies.py  test_portability.py  test_provider_limits.py  test_provider_onboarding.py  test_r2.py  test_real_providers.py  test_registry.py  test_repair.py  test_replica_state.py  test_roundtrip.py  test_scrubber.py  test_soft_block.py  test_spread.py  test_tigris.py  test_vault.py  test_vault_secrets.py  test_vercel_blob.py
web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts  ws.ts
(+5 files in other folders)
